<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Farhang</string>

    <!-- Letters -->
    <string name="letter_1">ғ</string>
    <string name="letter_2">ӣ</string>
    <string name="letter_3">қ</string>
    <string name="letter_4">ӯ</string>
    <string name="letter_5">ҳ</string>
    <string name="letter_6">ҷ</string>

    <string name="search">Поиск</string>
    <string name="favorites">Избранные</string>
    <string name="info">О приложении</string>
    <string name="phrasebook">Разговорник</string>
    <string name="note">Ёднома</string>

    <string name="app_version_string">Версия: <b>1.3.0</b></string>
    <string name="rate_app">Оценить приложение</string>

    <string name="inter_word">Введите слово</string>
    <string name="copy">Скопировано</string>
    <string name="copy_tj">Скопировать фразу</string>
    <string name="copy_ru">Скопировать перевод фразы</string>

    <string name="share">Поделиться</string>
    <string name="ok">OK</string>
    <string name="test_category_1">Погода</string>
    <string name="test_category_2">Боду хаво</string>
    <string name="test_phrases_1">Саломатии хонуматон (шавҳаратон) хубаст?</string>
    <string name="test_phrases_2">Как здоровье (самочувствие) супруги (супруга)?</string>
    <string name="test_note">абрикос</string>
    <string name="test_note_id">155</string>

    <!-- Empty list -->
    <string name="no_data">Такого слова нет :(</string>
    <string name="no_data_text_below">Попробуйте ввести другое слово</string>
    <string name="no_data_favorite">Нет избранных записей :(</string>
    <string name="no_data_text_below_favorite">Для того чтобы здесь появились записи выберите элемент и нажмите на звездочку</string>

    <string name="empty_box">empty box</string>
    <string name="inter_phrases">Введите фразу</string>
    <string name="touch_1">Скопировать фразу или её перевод</string>
    <string name="touch_2">Скопировать и фразу и её перевод</string>
    <string name="touch_3">Добавить фразу в избранные</string>
    <string name="github_logo">github logo</string>
    <string name="telegram_logo">telegram logo</string>
    <string name="close">Закрыть</string>

    <!-- Type of translate -->
    <string name="ru_tj_string">RU-TJ</string>
    <string name="choose_lang">Направление перевода:</string>
    <string name="version">Версия</string>

    <string name="direct_all">Все</string>
    <string name="direct_tJ_ru">TJ-RU</string>
    <string name="direct_ru_tj">RU-TJ</string>
    <string name="direct_tj_tj">TJ-TJ</string>
    <string name="todo">todo</string>
    <string name="title_settings">Настройки</string>
    <string name="title_languages">Выбрать язык интерфейса приложения</string>
    <string name="title_dark_them">Включить темную тему</string>
    <string name="title_notification">Подписаться на уведомления</string>
    <string name="title_version">Посмотреть версию и создателей приложения</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="languages_tj">Тоҷикӣ</string>
    <string name="languages_ru">Русский</string>
    <string name="languages_en">English</string>

</resources>