<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.word.WordFragment">

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_toStartOf="@id/btn_lang"
                android:paddingTop="@dimen/spacing_medium"
                app:cardBackgroundColor="@color/lightGrey"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/search_word"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_middle"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_search_dark"
                    android:drawablePadding="16dp"
                    android:hint="@string/search"
                    android:paddingEnd="@dimen/spacing_middle"
                    android:singleLine="true"
                    android:textColorHint="@color/secondaryText" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_lang"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:background="@drawable/border_bg"
                android:focusable="true"
                android:text="@string/ru_tj_string"
                android:textColor="@color/primaryText"
                app:backgroundTint="@color/lightGrey"
                app:icon="@drawable/ic_replace"
                app:iconTint="@color/primaryText" />

        </RelativeLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_word_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_panel"
        tools:listitem="@layout/word_item" />

    <include
        android:id="@+id/layout_no_data"
        layout="@layout/layout_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_panel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/letter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/letter_1"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/letter_1"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/letter_2"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/letter_2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/letter_3"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/letter_3"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/letter_4"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/letter_4"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/letter_5"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/letter_5"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/letter_6"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/letter_6"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>