<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="38dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bottom_sheet_line" />

        <LinearLayout
            android:id="@+id/direct_all"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_flag_direct_all" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/direct_all"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/direct_tj_ru"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:foregroundGravity="center"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_flag_tj" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/direct_tJ_ru"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/direct_ru_tj"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:foregroundGravity="center"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_flag_ru" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/direct_ru_tj"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/direct_tj_tj"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:foregroundGravity="center"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_flag_tj" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/direct_tj_tj"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>