<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@color/withe"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBackButton"
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/ic_arrow_back"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="20sp"
                    android:textFontWeight="500"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/title_settings"
                    android:gravity="center"/>

            </RelativeLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/divRefactorLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="#CAC9CA"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/labelLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_languages"
            android:textSize="18sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="#CAC9CA"
            android:layout_below="@+id/labelLanguage"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/divIncludeDarkThem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divRefactorLanguages"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/labelDarkThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/switchDarkThem"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_dark_them"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDarkThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:theme="@style/switchMaterialThem"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="#CAC9CA"
            android:layout_below="@+id/labelDarkThem"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/divNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divIncludeDarkThem"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/labelNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/switchNotification"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_notification"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:theme="@style/switchMaterialThem" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="#CAC9CA"
            android:layout_below="@+id/labelNotification"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/divSeeVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divNotification"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/labelVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_version"
            android:textSize="18sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="#CAC9CA"
            android:layout_below="@+id/labelVersion"/>

    </RelativeLayout>

</RelativeLayout>